syntax = "proto3";

package tcnapi.exile.gate.v2;

import "google/protobuf/timestamp.proto";
import "tcnapi/exile/core/v2/entities.proto";

service GateInternalApi {
  rpc ListPools(ListPoolsRequest) returns (ListPoolsResponse);
  rpc GetPoolStatus(GetPoolStatusRequest) returns (GetPoolStatusResponse);
  rpc GetPoolRecords(GetPoolRecordsRequest) returns (GetPoolRecordsResponse);
  rpc SearchRecords(SearchRecordsRequest) returns (SearchRecordsResponse);
  rpc GetRecordFields(GetRecordFieldsRequest) returns (GetRecordFieldsResponse);
  rpc SetRecordFields(SetRecordFieldsRequest) returns (SetRecordFieldsResponse);

  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc PopAccount(PopAccountRequest) returns (PopAccountResponse);

  rpc SendAgentCall(SendAgentCallRequest) returns (SendAgentCallResponse);
  rpc SendTelephonyResults(SendTelephonyResultsRequest) returns (SendTelephonyResultsResponse);
  rpc SendAgentResponse(SendAgentResponseRequest) returns (SendAgentResponseResponse);
  rpc Info(InfoRequest) returns (InfoResponse);
  rpc Seppuku(SeppukuRequest) returns (SeppukuResponse);
  rpc Log(LogRequest) returns (LogResponse);
}

message ListPoolsRequest {
  string org_id = 1;
  string job_id = 10;
}

message ListPoolsResponse {}

message GetPoolStatusRequest {
  string org_id = 1;
  string pool_id = 2;
  string job_id = 10;
}

message GetPoolStatusResponse {}

message GetPoolRecordsRequest {
  string org_id = 1;
  string pool_id = 2;
  string job_id = 10;
}

message GetPoolRecordsResponse {}

message SearchRecordsRequest {
  string org_id = 1;
  string aip160_filter = 2;
  string job_id = 10;
  // TBD
}

message SearchRecordsResponse {}

message GetRecordFieldsRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  repeated string field_names = 4;
  string job_id = 10;
}

message GetRecordFieldsResponse {}

message SetRecordFieldsRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  repeated tcnapi.exile.core.v2.Field fields = 4;
  string job_id = 10;
}

message SetRecordFieldsResponse {}

message CreatePaymentRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  string payment_id = 4;
  string payment_type = 5;
  string payment_amount = 6;
  google.protobuf.Timestamp payment_date = 7;
  string job_id = 10;
}

message CreatePaymentResponse {}

message PopAccountRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  string call_sid = 4;
  string call_type = 5;
  string job_id = 10;
}

message PopAccountResponse {}

message SendAgentCallRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  string agent_id = 4;
  string call_sid = 5;
  string call_type = 6;
  string job_id = 10;
  // TBD
}

message SendAgentCallResponse {}

message SendTelephonyResultsRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  string call_sid = 4;
  string call_type = 5;
  string job_id = 10;
  // TBD
}

message SendTelephonyResultsResponse {}

message SendAgentResponseRequest {
  string org_id = 1;
  string pool_id = 2;
  string record_id = 3;
  string agent_id = 4;
  string call_sid = 5;
  string call_type = 6;
  string job_id = 10;
  // TBD
}

message SendAgentResponseResponse {}

message InfoRequest {
  string org_id = 1;
  string job_id = 2;
}
message InfoResponse {}

message SeppukuRequest {
  string org_id = 1;
  string job_id = 2;
}
message SeppukuResponse {}

message LogRequest {
  string org_id = 1;
  string job_id = 2;
}
message LogResponse {}
